# mailboxes-splitter

./: LICENSE  README.md  mailboxes-splitter.cabal  stack.yaml
app/: Main.hs
src/: Mailboxes.hs  Main.hs
test/: MailboxesSpec.hs
