name:                mailboxes-splitter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/snowiow/mailboxes-splitter#readme
license:             BSD3
license-file:        LICENSE
author:              Marcel Patzwahl
maintainer:          marcel.patzwahl@posteo.de
copyright:           MIT
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mailboxes-splitter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       strings
